--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ flask = "^3.0.0"
 flask-sqlalchemy = "^3.1.1"
 flask-cors = "^4.0.0"
 
+[tool.poetry.scripts]
+app = "reviewers_quest.app:main"
 
 [build-system]
 requires = ["poetry-core"]
