--- a/.github/workflows/website-ci.yml
+++ b/.github/workflows/website-ci.yml
@@ -22,17 +22,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: ➡️ Move to frontend directory
-      run: cd frontend
     - name: 📥 Install Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: 'frontend/package-lock.json'
     - name: 👀 Check setup
       run: |
         npm --version
         node --version
+    - name: ➡️ Move to frontend directory
+      run: cd frontend
     - name: 📥 Install dependencies
       run: npm ci
     - name: 🛠️ Build frontend
@@ -65,10 +66,13 @@ jobs:
       uses: snok/install-poetry@v1
       with:
         version: ${{ strategy.matrix.poetry-version }}
+    - name: 📥 Install Python project dependencies
+      run: poetry install --with dev --sync
     - name: 👀 Check setup
       run: |
         python3 --version
         poetry --version
+        poetry run ruff --version
     - name: ✅ Run ruff linter
       run: poetry run ruff check ${BACKEND_SRC_FOLDER}
     - name: ✅ Run tests
