website-ci.yml: cmon go to the frontend folder

--- a/.github/workflows/website-ci.yml
+++ b/.github/workflows/website-ci.yml
@@ -33,7 +33,10 @@ jobs:
         npm --version
         node --version
     - name: ➡️ Move to frontend directory
-      run: cd frontend
+      run: |
+        cd frontend
+        pwd
+        ls -ltah
     - name: 📥 Install dependencies
       run: npm ci
     - name: 🛠️ Build frontend
