--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ flask-sqlalchemy = "^3.1.1"
 flask-cors = "^4.0.0"
 
 [tool.poetry.scripts]
-app = "reviewers_quest.app:main"
+app = "scripts:run"
+format = "scripts:format"
+check = "scripts:check"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.4"
