--- a/.github/workflows/website-ci.yml
+++ b/.github/workflows/website-ci.yml
@@ -64,11 +64,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - name: 🐍 Setup Python
+      uses: actions/setup-python@v4
       with:
         python-version: "${{ matrix.python-version }}"
+    - name: 🍇 Load cached Poetry installation
+      id: cached-poetry
+      uses: actions/cache@v3
+      with:
+        path: ~/.local  # the path depends on the OS
+        key: poetry-0  # increment to reset cache
     - name: 📥 Install and configure Poetry
       uses: snok/install-poetry@v1
+      if: steps.cached-poetry.outputs.cache-hit != 'true'
       with:
         version: ${{ strategy.matrix.poetry-version }}
     - name: 📥 Install Python project dependencies
