backend/ruff: add more rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ ruff = "^0.1.4"
 line-length = 120
 target-version = "py311"
 task-tags = ["TODO", "FIXME"]
-extend-select = ["ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206"]
+select = ["E4", "E7", "E9", "F", "ANN001", "ANN2", "N80", "N999", "B0", "A", "ISC", "RET", "SIM", "UP"]
 
 [build-system]
 requires = ["poetry-core"]
