--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,10 @@ ruff = "^0.1.4"
 line-length = 120
 target-version = "py311"
 task-tags = ["TODO", "FIXME"]
-select = ["E4", "E7", "E9", "F", "ANN001", "ANN2", "N80", "N999", "B0", "A", "ISC", "RET", "SIM", "UP"]
+select = [
+    "E4", "E7", "E9", "F", "ANN001", "ANN2", "N80", "N999", "B0", "A", "ISC003", "RET", "SIM", "UP",
+    "D101", "D104", "D106"
+]
 
 [build-system]
 requires = ["poetry-core"]
