--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flask-cors = "^4.0.0"
 app = "scripts:run"
 format = "scripts:format"
 check = "scripts:check"
+typecheck = "scripts:typecheck"
 regendb = "scripts:regendb"
 
 [tool.poetry.group.dev.dependencies]
