--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,12 @@ target-version = "py311"
 task-tags = ["TODO", "FIXME"]
 select = [
     "E4", "E7", "E9", "F", "ANN001", "ANN2", "N80", "N999", "B0", "A", "ISC003", "RET", "SIM", "UP",
-    "D101", "D103", "D104", "D106", "D200", "D204", "D205", "D209", "D211", "D213", "D418", "D419"
+    "D101", "D103", "D104", "D106", "D200", "D204", "D205", "D209", "D211", "D213", "D418", "D419",
+    "I001"
 ]
+
+[tool.ruff.lint.isort]
+relative-imports-order = "closest-to-furthest"
 
 [build-system]
 requires = ["poetry-core"]
