--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 flask = "^3.0.0"
 flask-sqlalchemy = "^3.1.1"
 flask-cors = "^4.0.0"
+flask-login = "^0.6.3"
 
 [tool.poetry.scripts]
 app = "scripts:run"
